implementa favicon e menu

--- a/index.html
+++ b/index.html
@@ -18,14 +18,23 @@
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="/index.html" class="brand-logo left">
-						<img src="img/SVG/logo.svg" alt="Logo do O2MR" height="60">
+						<img src="img/logo.png" alt="Logo Boulevard Anjos">
 					</a>
 					<ul class="right hide-on-med-and-down">
-						<li><a href="/index.html">Home</a></li>
-						<li><a href="#resume">O que é?</a></li>
-						<li><a href="#testimonials">Opiniões</a></li>
-						<li><a href="#blog">Blog</a></li>
-						<li><a href="#contact" class="btn btn-primary">Contato</a></li>
+						<li><a href="/index.html">CINEMA</a></li>
+						<li><a href="#resume">LOJAS</a></li>
+						<li><a href="#testimonials">ALIMENTAÇÃO</a></li>
+						<li><a href="#blog">NOVIDADES</a></li>
+						<li class="icon">
+							<a href="#search">
+								<i class="fas fa-search"></i>
+							</a>
+						</li>
+						<li  class="icon">
+							<a href="#menu">
+								<i class="fas fa-bars"></i>
+							</a>
+						</li>
 					</ul>
 				</div>
 			</nav>
@@ -33,24 +42,8 @@
 
 		<div class="heading">
 			<div class="row">
-				<div class="col">
-					<h1>O GÁS PARA SOMAR AO SEU NEGÓCIO. <br class="mobile-break">
-						NA <span class="text-primary">MEDIDA CERTA</span>.</h1>
-					<h2>Planejamento estratégico de marketing ao alcance de seu negócio!</h2>
-					<p>A <b><span class="text-primary">O2</span> MR</b> vem apresentar ao mercado o conceito de uma assessoria +
-						agência, ou seja, uma assessoria estratégica de
-						marketing capaz de identificar e elaborar junto ao cliente a melhor solução em marketing com foco em
-						performance para o
-						modelo de negócio dele e dentro de sua realidade orçamentária, seja esta on ou off-line, ou ainda, a mescla
-						das duas. E
-						como colocar esta solução customizada em prática? Através dos serviços de profissionais de design e eventos,
-						ou ainda,
-						agências de marketing e comunicação que a <b><span class="text-primary">O2</span> MR</b> tem como parceiros.
-					</p>
-					
-				<div class="mobile-button btn btn-primary">
-					QUERO SABER MAIS
-				</div>
+			
+						
 			</div>
 		</div>
 	</section>
