--- a/index.html
+++ b/index.html
@@ -49,287 +49,119 @@
 	</section>
 
 	<section class="resume" id="resume">
-		<div class="heading">
-			<h1>O QUE FAZEMOS<br class="mobile-break">
-				<span>
-					E <span class="text-primary">COMO</span> FAZEMOS?
-				</span>
-			</h1>
-		</div>
-		<div class="section-text">
-			<h2>OXIGÊNIO. RESPIRE. INSPIRE.</h2>
-			<p>Aliamos <span class="text-primary">tecnologia e expertise em marketing</span> para gerar experiências que
-				proporcionem <span class="text-primary">resultados.</span>
-				Atuamos do BRAINSTORN a MENSURAÇÃO DOS RESULTADOS das ações de marketing, ou seja, deixe seu planejamento de
-				marketing e
-				operacionalização com quem entende!</p>
-		</div>
+
 	</section>
 
 	<section class="services">
-		<h1>SERVIÇOS</h1>
-		<div class="services_grid">
-			<div class="row">
-				<div class="col s4 left-col">
-					<div class="item-top">
-						<div class="icon">
-							<img src="img/SVG/Planningsvg.svg" height="50">
-						</div>
-						<div class="info">
-							<p>Planejamento estratégico</p>
-						</div>
-					</div>
-					<hr>
-					<div class="item-bottom">
-						<div class="icon">
-							<img src="img/SVG/leads.svg" height="50">
-						</div>
-						<div class="info">
-							<p>Geração de leads e qualificação</p>
-						</div>
-					</div>
-				</div>
-				<div class="col s4 center-col">
-					<div class="item-top">
-						<div class="icon">
-							<img src="img/SVG/branding.svg" height="50">
-						</div>
-						<div class="info">
-							<p>Branding</p>
-						</div>
-					</div>
-					<hr>
-					<div class="item-bottom">
-						<div class="icon">
-							<img src="img/SVG/corporateparty.svg" height="50">
-						</div>
-						<div class="info">
-							<p>Eventos corporativos com propósito</p>
-						</div>
-					</div>
-				</div>
-				<div class="col s4 right-col">
-					<div class="item-top">
-						<div class="icon">
-							<img src="img/SVG/SEO.svg" height="50">
-						</div>
-						<div class="info">
-							<p>Ampliação da presença digital</p>
-						</div>
-					</div>
-					<hr>
-					<div class="item-bottom">
-						<div class="icon">
-							<img src="img/SVG/building.svg" height="50">
-						</div>
-						<div class="info">
-							<p>E tudo que for estratégico para o seu negócio!</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<div class="spacer">
-		<hr class="primary-spacer">
-	</div>
-
-	<section class="text-slider">
-		<!-- Slideshow container -->
-		<div class="slideshow-container">
-
-			<!-- Full-width slides/quotes -->
-			<div class="mySlides">
-				<p>Muitas empresas de pequeno e médio porte sempre encontram a dificuldade de contratar um profissional de
-					marketing sênior
-					para avaliar seu negócio e estrategicamente promover ações de marketing para o seu público-alvo, a fim de
-					expandir os
-					seus resultados principalmente de vendas. Ou ainda, a realidade das empresas hoje, neste caso, de qualquer
-					tamanho ou
-					porte, é reduzir os custos de certos departamentos que não são o cerne de seus negócios e podem ser
-					terceirizados e
-					assumidos por empresas especialistas como a O2MR – um HUB de marketing.</p>
-			</div>
-
-			<div class="mySlides">
-				<p>Um dos grandes erros das empresas é não encarar as ações estratégicas de marketing como algo importante para
-					o
-					crescimento sustentável do negócio. Julga-se um serviço muito caro ou ainda não percebem os resultados que
-					podem ser
-					alcançados ou impulsionados, pois muitas vezes, não há definições estratégicas corretas e, com isso, na
-					mensuração dos
-					resultados estes não aparecem.</p>
-			</div>
-
-			<div class="mySlides">
-				<b>Por exemplo:</b>
-				<p>Tenho vários seguidores no Instagram da empresa, mas eles convertem em vendas para o seu negócio?
-					Comprei uma ferramenta para gravar vídeo legal e cara? Será que precisava de todos os recursos que ela
-					proporciona? Fez
-					o estudo de qual mensagem passar no vídeo? Ou o que sua persona está querendo resolver o problema?
-					Quantos leads converteram no mês passado? Ou a meta de leads a serem gerados?</p>
-			</div>
-
-			<div class="mySlides">
-				<p>São muitas perguntas que devem ser feitas durante o diagnóstico de seu negócio para aí sim construir um
-					<b>plano estratégico de marketing.</b>
-					Sabemos que a forma de consumir mudou, o mundo está muito digital, assim, integrar estas ferramentas online a
-					algumas
-					formas tradicionais de ações de marketing que tragam experiência ao consumidor é o ideal para um resultado
-					mais
-					assertivo. O consumidor quer pesquisar, saber opiniões ou ainda ter acesso a avaliações digitalmente, mas quer
-					se
-					envolver e engajar no real. <b>Match! O virtual e a realidade para um resultado otimizado.</b></p>
-			</div>
-
-			<!-- Next/prev buttons -->
-			<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-			<a class="next" onclick="plusSlides(1)">&#10095;</a>
-		</div>
-
-		<!-- Dots/bullets/indicators -->
-		<div class="dot-container">
-			<span class="dot" onclick="currentSlide(1)"></span>
-			<span class="dot" onclick="currentSlide(2)"></span>
-			<span class="dot" onclick="currentSlide(3)"></span>
-			<span class="dot" onclick="currentSlide(4)"></span>
-		</div>
-	</section>
-
-	<section class="schema">
-		<img src="img/schema.png" alt="">
-	</section>
-
-	<section class="testimonials" id="testimonials">
-		<div class="heading">
-			<h1><span class="text-primary">OPINIÕES</span><br>
-				<span>DE QUEM JA USA O HUB MARKETING DA <b><span class="text-primary">O2</span>MR</b></span>
-			</h1>
-		</div>
-		<div class="row">
-			<div class="col s12 m6">
-				<div class="card">
-					<div class="testimonial">
-						<q>Fomos uns dos primeiros clientes da O2MR, tínhamos a necessidade de ter uma assessoria externa de
-							marketing para
-							planejamento estratégico e operacionalização de ações com o objetivo principal de tornar nosso e-Commerce
-							e marca
-							conhecidos e referência no mercado de vedações. Conseguimos já gerar resultados interessantes como o
-							aumento de tráfego
-							para nosso portal e oportunidades comerciais por canais diferenciados como o LinkedIN. Além disso,
-							participamos de nosso
-							primeiro evento a Feira Automec, a qual gerou leads qualificados para nosso comercial e uma experiência
-							que culminou em
-							um maior engajamento de público em nossas redes sociais. Hoje, já estamos na fase de aprimoramento das
-							estratégias para
-							a conversão de leads em vendas, pois já temos em mãos o histórico dos resultados alcançados por cada ação
-							de marketing
-							promovida, como website, e-mail marketing, redes sociais, eventos, etc.</q>
-					</div>
-					<div class="witness">
-						<div class="witness_photo">
-							<img src="img/add_comerce.jpeg" alt="Foto de Marcos Valério" title="Foto de Marcos Valério">
-						</div>
-						<div class="witness_data">
-							<div class="name">Marcos Valério</div>
-							<div class="job">Diretor Técnico | ADD Commerce</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="col s12 m6">
-				<div class="card">
-					<div class="testimonial right">
-						<q>A estruturação de um planejamento estratégico de marketing se fazia necessário para este momento da
-							empresa de querer
-							se expandir. Com isso, a O2 MR se fez uma boa alternativa, pois se enquadrava, principalmente, na
-							realidade orçamentária
-							da Tria Software. Hoje, estamos com uma melhor clareza das ações de marketing a serem promovidas e das
-							metas que
-							queremos alcançar com a ajuda de marketing. O interessante é que já recebemos oportunidades de vendas, por
-							exemplo,
-							através do disparo de um e-mail marketing, além disso, estamos bem ranqueados em sites de buscas em
-							palavras-chave
-							relativas ao nosso negócio e localização como - desenvolvimento de softwares sjc. Partiremos agora com a
-							participação de
-							eventos de tecnologia e investimentos em campanhas patrocinadas</q>
-					</div>
-					<div class="witness right">
-						<div class="witness_photo">
-							<img src="img/tria_software.jpeg" alt="Foto de Marcos Valério" title="Foto de Marcos Valério">
-						</div>
-						<div class="witness_data">
-							<div class="name">Marcos Almeida</div>
-							<div class="job">Diretor | Tria Software</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="contact" id="contact">
-		<h1>CONTATO</h1>
-		<div class="container">
-			<div class="row">
-				<form class="col s12" action="sendmail.php" method="POST" name="form">
-					<div class="row">
-						<div class="input-field col s12">
-							<input name="nome" id="first_name" type="text" class="validate form-input" required>
-							<label for="first_name" class="label">Nome</label>
-						</div>
-					</div>
-					<div class="row">
-						<div class="input-field col s12">
-							<input name="email" id="company" type="email" class="validate form-input" required>
-							<label for="company" class="label">E-mail</label>
-						</div>
-					</div>
-					<div class="row">
-						<div class="input-field col s12">
-							<input name="telefone" id="phone" type="text" class="validate form-input" required>
-							<label for="phone" class="label">Telefone</label>
-						</div>
-					</div>
-					<div class="row">
-						<div class="input-field col s12">
-							<input name="mensagem" id="mensagem" type="text" class="validate form-input" required>
-							<label for="mensagem" class="label">Mensagem</label>
-						</div>
-					</div>
-					<div class="button">
-						<button type="submit" class="btn btn-primary">ENVIAR</button>
-					</div>
-				</form>
-			</div>
-		</div>
+		
 	</section>
 
 	<section class="footer">
 		<div class="footer-content">
-			<div class="footer-left">
-				<img src="img/SVG/logo.svg" alt="Logo do O2MR" height="100">
-				<p>©2019 O2 Marketing de Resultados - todos os direitos reservados.</p>
+
+			<h4 class="title">HORÁRIOS DE FUNCIONAMENTO</h4>
+
+			<div class="carousel">
+				<div class="row">
+					<div class="col">
+						<div class="item">
+							<div class="icon">
+								<i class="fal fa-utensils"></i>
+							</div>
+							<div class="item-title">ALIMENTAÇÃO</div>
+							<div class="desc">
+								<p>Segunda a sábado: 10h às 22h.</p>
+								<p>Domingo: 11h às 21h.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="item">
+							<div class="icon">
+								<i class="fal fa-utensils"></i>
+							</div>
+							<div class="item-title">ALIMENTAÇÃO</div>
+							<div class="desc">
+								<p>Segunda a sábado: 10h às 22h.</p>
+								<p>Domingo: 11h às 21h.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="item">
+							<div class="icon">
+								<i class="fal fa-utensils"></i>
+							</div>
+							<div class="item-title">ALIMENTAÇÃO</div>
+							<div class="desc">
+								<p>Segunda a sábado: 10h às 22h.</p>
+								<p>Domingo: 11h às 21h.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="item mr-0">
+							<div class="icon">
+								<i class="fal fa-utensils"></i>
+							</div>
+							<div class="item-title">ALIMENTAÇÃO</div>
+							<div class="desc">
+								<p>Segunda a sábado: 10h às 22h.</p>
+								<p>Domingo: 11h às 21h.</p>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="footer-right">
-				<ul class="address">
-					<li><a href="https://wa.me/5512991361466">(12) 9 9136 1466
-							&nbsp;<i class="fab fa-whatsapp"></i></a> </li>
-					<li>adriana.aurichio@<b><span class="text-primary">O2</span>MR</b>.com.br</li>
-					<li>Rua República do Iraque, nº 40</li>
-					<li>Jd. Oswaldo Cruz, São José dos Campos - SP</li>
-					<li>Sala 205 | 206</li>
-				</ul>
-				<div class="social">
-					<a href="https://triasoftware.com.br" target="_blank"><span class="fal"></span></a>
-					<a href="https://linkedin.com/company/triasoftware" target="_blank"><span class="fab"></span></a>
-					<a href="https://facebook.com/triasoftwaresjc" target="_blank"><span class="fab"></span></a>
-					<a href="https://instagram.com/triasoftware" target="_blank"><span class="fab"></span></a>
+
+			<div class="links">
+				<div class="row">
+					<div class="left-side">
+						<div class="col">
+							<a href="#">O SHOPPING</a>
+							<a href="#">LAZER</a>
+							<a href="#">SERVIÇOS</a>
+							<button class="btn btn-circle">
+								<i class="fab fa-instagram"></i>
+							</button>
+						</div>
+						<div class="col">
+							<a href="#">TRABALHE CONOSCO</a>
+							<a href="#">FALE CONOSCO</a>
+						</div>
+					</div>
+
+					<div class="right-side">
+						<div class="col">
+							<h6>ENDEREÇO</h6>
+							<p>Avenida Centenário, 555  | Gravataí - RS</p>
+							<button class="btn btn-outline">
+								<i class="fal fa-map-marker-alt"></i>
+								VER LOCALIZAÇÃO NO MAPA
+							</button>
+						</div>
+						<div class="col">
+							<h6>CADASTRE-SE</h6>
+							<p>Receba novidades por e-mail:</p>
+							<button class="btn btn-outline">
+								<i class="fal fa-pencil-alt"></i>
+								CADASTRAR E-MAIL
+							</button>
+						</div>
+						<div class="col">
+							<h6>CONTATO</h6>
+							<p>SAC: (51) 3421-9400</p>
+							<button class="btn btn-outline">
+								<i class="fal fa-envelope"></i>
+								ENVIAR MENSAGEM
+							</button>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
 	<script src="js/materialize.min.js"></script>
 	<script src="js/functions.js"></script>
 </body>
