--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Gravataí</title>
 	<link rel="icon" href="favicon.png" type="image/x-icon" />
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
 	<link href="css/libs.css" type="text/css" rel="stylesheet" />
 </head>
@@ -40,12 +41,6 @@
 			</nav>
 		</div>
 
-		<div class="heading">
-			<div class="row">
-			
-						
-			</div>
-		</div>
 	</section>
 
 	<section class="resume" id="resume">
@@ -62,7 +57,7 @@
 			<h4 class="title">HORÁRIOS DE FUNCIONAMENTO</h4>
 
 			<div class="carousel">
-				<div class="row">
+				<div class="row slick">
 					<div class="col">
 						<div class="item">
 							<div class="icon">
@@ -162,6 +157,9 @@
 		</div>
 	</section>
 
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	<script src="js/materialize.min.js"></script>
 	<script src="js/functions.js"></script>
 </body>
