estiliza setas do carousel

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Gravataí</title>
 	<link rel="icon" href="favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" /> -->
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
 	<link href="css/libs.css" type="text/css" rel="stylesheet" />
 </head>
@@ -58,6 +59,30 @@
 
 			<div class="carousel">
 				<div class="row slick">
+					<div class="col">
+						<div class="item">
+							<div class="icon">
+								<i class="fal fa-utensils"></i>
+							</div>
+							<div class="item-title">ALIMENTAÇÃO</div>
+							<div class="desc">
+								<p>Segunda a sábado: 10h às 22h.</p>
+								<p>Domingo: 11h às 21h.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="item">
+							<div class="icon">
+								<i class="fal fa-utensils"></i>
+							</div>
+							<div class="item-title">ALIMENTAÇÃO</div>
+							<div class="desc">
+								<p>Segunda a sábado: 10h às 22h.</p>
+								<p>Domingo: 11h às 21h.</p>
+							</div>
+						</div>
+					</div>
 					<div class="col">
 						<div class="item">
 							<div class="icon">
