--- a/index.html
+++ b/index.html
@@ -16,24 +16,26 @@
 
 	<section class="hero">
 
+	<!-- INICIO DO MENU -->
+
 	<div class="navbar-fixed">
 			<nav class="navbar">
 				<div class="nav-wrapper">
-					<a href="/index.html" class="brand-logo left">
+					<a href="#" class="brand-logo left">
 						<img src="img/logo.png" alt="Logo Boulevard Anjos">
 					</a>
 					<ul class="right hide-on-med-and-down">
-						<li><a href="/index.html">CINEMA</a></li>
-						<li><a href="#resume">LOJAS</a></li>
-						<li><a href="#testimonials">ALIMENTAÇÃO</a></li>
-						<li><a href="#blog">NOVIDADES</a></li>
+						<li><a href="#">CINEMA</a></li>
+						<li><a href="#">LOJAS</a></li>
+						<li><a href="#">ALIMENTAÇÃO</a></li>
+						<li><a href="#">NOVIDADES</a></li>
 						<li class="icon">
-							<a href="#search">
+							<a href="#">
 								<i class="fas fa-search"></i>
 							</a>
 						</li>
 						<li  class="icon">
-							<a href="#menu">
+							<a href="#">
 								<i class="fas fa-bars"></i>
 							</a>
 						</li>
@@ -41,6 +43,8 @@
 				</div>
 			</nav>
 		</div>
+
+		<!-- FIM DO MENU -->
 
 	</section>
 
@@ -51,6 +55,8 @@
 	<section class="services">
 		
 	</section>
+
+	<!-- INICIO DO FOOTER -->
 
 	<section class="footer">
 		<div class="footer-content">
@@ -181,6 +187,8 @@
 			</div>
 		</div>
 	</section>
+
+	<!-- FIM DO FOOTER -->
 
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
