inicia implementação de novas paginas

--- a/pages/_default.html
+++ b/pages/_default.html
@@ -7,8 +7,8 @@
 	<title>Gravataí</title>
 	<link rel="icon" href="favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-	<link href="css/style.css" type="text/css" rel="stylesheet" />
-	<link href="css/libs.css" type="text/css" rel="stylesheet" />
+	<link href="../css/style.css" type="text/css" rel="stylesheet" />
+	<link href="../css/libs.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -21,10 +21,10 @@
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="#" class="brand-logo left">
-						<img src="img/logo.png" alt="Logo Boulevard Anjos">
+						<img src="../img/logo.png" alt="Logo Boulevard Anjos">
 					</a>
 					<ul class="right hide-on-med-and-down">
-						<li><a href="#">CINEMA</a></li>
+						<li><a href="/pages/cinema.html">CINEMA</a></li>
 						<li><a href="#">LOJAS</a></li>
 						<li><a href="#">ALIMENTAÇÃO</a></li>
 						<li><a href="#">NOVIDADES</a></li>
@@ -192,8 +192,8 @@
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-	<script src="js/materialize.min.js"></script>
-	<script src="js/functions.js"></script>
+	<script src="../js/materialize.min.js"></script>
+	<script src="../js/functions.js"></script>
 </body>
 
 </html>
