--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Gravataí</title>
 	<link rel="icon" href="favicon.png" type="image/x-icon" />
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 	<link href="../css/style.css" type="text/css" rel="stylesheet" />
 	<link href="../css/libs.css" type="text/css" rel="stylesheet" />
 </head>
@@ -189,9 +188,9 @@
 
 	<!-- FIM DO FOOTER -->
 
-	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script type="text/javascript" src="../js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="../js/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="../js/slick.min.js"></script>
 	<script src="../js/materialize.min.js"></script>
 	<script src="../js/functions.js"></script>
 </body>
