insere filmes, paginas e outros

--- a/pages/cinema.html
+++ b/pages/cinema.html
@@ -14,9 +14,9 @@
 
 	<section class="hero">
 
-	<!-- INICIO DO MENU -->
+		<!-- INICIO DO MENU -->
 
-	<div class="navbar-fixed">
+		<div class="navbar-fixed">
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="#" class="brand-logo left">
@@ -32,7 +32,7 @@
 								<i class="fas fa-search"></i>
 							</a>
 						</li>
-						<li  class="icon">
+						<li class="icon">
 							<a href="#">
 								<i class="fas fa-bars"></i>
 							</a>
@@ -41,7 +41,7 @@
 				</div>
 			</nav>
 		</div>
-		
+
 		<div class="banner">
 			<a href="#" class="btn btn-play">
 				<i class="far fa-play"></i>
@@ -53,7 +53,7 @@
 		</div>
 		<div class="card">
 			<div class="movie-card"></div>
-				
+
 		</div>
 
 		<!-- FIM DO MENU -->
@@ -61,11 +61,23 @@
 	</section>
 
 	<section class="resume" id="resume">
-
+		<p>
+			Quarto filme da franquia Os Vingadores, na 3ª Fase do Universo Cinematográfico da Marvel. Culminando a
+			jornada de 21 filmes interconectados, Vingadores: Ultimato mostra o fim da luta dos heróis contra Thanos,
+			o titã louco. Após utilizar a manopla do infinito, Thanos dizimou metade dos seres vivos do universo, agora,
+			ainda sofrendo com a perda dos Vingadores devem se recompor e criar um plano para derrotar o vilão e
+			desfazer todo o caos.
+		</p>
+		<p><b>Horários | Período:</b> 		02/05 a 08/05.</p>
+		<p><b>Sala 1 | 3D | Dublado |</b> 	13:00 - 16:45 - 20:30</p>
+		<p><b>Sala 2 | 3D | Dublado |</b> 	13:30 - 17:15 - 21:00</p>
+		<p><b>Sala 3 | Dublado |</b> 		10:30 - 14:15 - 18:00</p>
+		<p><b>Sala 5 | Dublado |</b> 		17:40 - 21:20</p>
+		<p><b>Sala 6 | Dublado |</b> 		16:00 - 19:45</p>
 	</section>
 
 	<section class="services">
-		
+
 	</section>
 
 	<!-- INICIO DO FOOTER -->
@@ -172,7 +184,7 @@
 					<div class="right-side">
 						<div class="col">
 							<h6>ENDEREÇO</h6>
-							<p>Avenida Centenário, 555  | Gravataí - RS</p>
+							<p>Avenida Centenário, 555 | Gravataí - RS</p>
 							<button class="btn btn-outline">
 								<i class="fal fa-map-marker-alt"></i>
 								VER LOCALIZAÇÃO NO MAPA
