--- a/pages/lazer.html
+++ b/pages/lazer.html
@@ -14,9 +14,9 @@
 
 	<section class="hero">
 
-	<!-- INICIO DO MENU -->
+		<!-- INICIO DO MENU -->
 
-	<div class="navbar-fixed">
+		<div class="navbar-fixed">
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="#" class="brand-logo left">
@@ -32,7 +32,7 @@
 								<i class="fas fa-search"></i>
 							</a>
 						</li>
-						<li  class="icon">
+						<li class="icon">
 							<a href="#">
 								<i class="fas fa-bars"></i>
 							</a>
@@ -42,72 +42,35 @@
 			</nav>
 		</div>
 
-	<!-- FIM DO MENU -->
-
-		<!-- CAROUSEL -->
-		<div id="carousel-indicator" class="carousel slide">
-			<ol class="carousel-indicators">
-			  <li data-target="#carousel-indicator" data-slide-to="0" class="active"></li>
-			  <li data-target="#carousel-indicator" data-slide-to="1"></li>
-			  <li data-target="#carousel-indicator" data-slide-to="2"></li>
-			</ol>
-			<div class="carousel-inner">
-			  <div class="carousel-item active">
-				<img class="d-block w-100 bg-overlay" src="../img/shopping.jpg" alt="First slide">
-			  </div>
-			  <div class="carousel-item">
-				<img class="d-block w-100" src="../img/rua.jpg" alt="Second slide">
-			  </div>
-			  <div class="carousel-item">
-				<img class="d-block w-100" src="../img/estacionamento.jpg" alt="Third slide">
-			  </div>
-			</div>
-			<a class="carousel-control-prev" href="#carousel-indicator" role="button" data-slide="prev">
-			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control-next" href="#carousel-indicator" role="button" data-slide="next">
-			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Next</span>
-			</a>
-		  </div>
-		  <!-- FIM DO CAROUSEL -->
+		<!-- FIM DO MENU -->
 
 	</section>
 
-	<section class="cinema" id="resume">
-		<h2 class="title">CINEMA</h2>
-		<p class="subtitle">Confira a programação da semana no Arcoplex Gravataí Shopping Center:</p>
-		<div class="movies">
-			<div class="movie-card">
-				<img src="../img/shazam_capa.jpg" alt="Shazam" class="movie">
-				<h5 class="movie-title">Shazam</h5>
-			</div>
-			<div class="movie-card">
-				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="movie">
-				<h5 class="movie-title">Capitã Marvel</h5>
-			</div>
-			<div class="movie-card">
-				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="movie">
-				<h5 class="movie-title">Dumbo</h5>
-			</div>
-			<div class="movie-card">
-				<img src="../img/aladin_capa.jpg" alt="Aladin" class="movie">
-				<h5 class="movie-title">Aladin</h5>
-			</div>
-			<div class="movie-card">
-				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="movie">
-				<h5 class="movie-title">Vingadores</h5>
-			</div>
-			<div class="movie-card">
-				<img src="../img/sw_capa.jpg" alt="Star Wars" class="movie">
-				<h5 class="movie-title">Star Wars</h5>
-			</div>
-		</div>
+	<section class="resume" id="resume">
+
+		<p>26/06/2019</p>
+
+		<b>DOMINGO DIVERTIDO: TEATRO</b>
+
+		<P>O espetáculo tem texto de Juliano Prado e Marcos Luporini, os criadores do projeto Galinha Pintadinha, que
+			conquistou filhos e pais de todo o Brasil, contabilizando mais de 01 milhão de DVDs oficiais vendidos, 2
+			discos de
+			diamante, mais de 600 milhões de visualizações no YouTube, além de contratos com grandes empresas de
+			produção artística, distribuição e licenciamento de produtos.
+		</P>
+		<p>A história dividida entre a vida de estrela e mãe de família, a Galinha Pintadinha tem uma crise e desaparece
+			deixando pais e crianças perplexos. A explicação, segundo a Baratinha, é que ela vai encerrar a carreira!
+			Verdade ou mentira? Dispostos a encontrar a Galinha Pintadinha e desfazer a confusão, a banda Naftalinas
+			embarca em uma divertida viagem pelas canções infantis que unem pais e filhos.
+		</p>
+		<p>No Shopping a peça será apresentada dia <b>05/07</b>, a partir das <b>15h</b> na praça de eventos.</p>
+
+		<p><b>Data:</b> 05/07/2019 <b>Horário:</b> 15h <b>Local:</b> Praça de eventos</p>
+		<p><b>Preço:</b> Evento gratuito</p>
 	</section>
 
 	<section class="services">
-		
+
 	</section>
 
 	<!-- INICIO DO FOOTER -->
@@ -214,7 +177,7 @@
 					<div class="right-side">
 						<div class="col">
 							<h6>ENDEREÇO</h6>
-							<p>Avenida Centenário, 555  | Gravataí - RS</p>
+							<p>Avenida Centenário, 555 | Gravataí - RS</p>
 							<button class="btn btn-outline">
 								<i class="fal fa-map-marker-alt"></i>
 								VER LOCALIZAÇÃO NO MAPA
@@ -248,7 +211,6 @@
 	<script type="text/javascript" src="../js/jquery-migrate-1.2.1.min.js"></script>
 	<script type="text/javascript" src="../js/slick.min.js"></script>
 	<script src="../js/materialize.min.js"></script>
-	<script src="../js/bootstrap.bundle.min.js"></script>
 	<script src="../js/functions.js"></script>
 </body>
 
