--- a/pages/trabalhe-conosco.html
+++ b/pages/trabalhe-conosco.html
@@ -14,9 +14,9 @@
 
 	<section class="hero">
 
-	<!-- INICIO DO MENU -->
+		<!-- INICIO DO MENU -->
 
-	<div class="navbar-fixed">
+		<div class="navbar-fixed">
 			<nav class="navbar">
 				<div class="nav-wrapper">
 					<a href="#" class="brand-logo left">
@@ -32,7 +32,7 @@
 								<i class="fas fa-search"></i>
 							</a>
 						</li>
-						<li  class="icon">
+						<li class="icon">
 							<a href="#">
 								<i class="fas fa-bars"></i>
 							</a>
@@ -42,72 +42,49 @@
 			</nav>
 		</div>
 
-	<!-- FIM DO MENU -->
-
-		<!-- CAROUSEL -->
-		<div id="carousel-indicator" class="carousel slide">
-			<ol class="carousel-indicators">
-			  <li data-target="#carousel-indicator" data-slide-to="0" class="active"></li>
-			  <li data-target="#carousel-indicator" data-slide-to="1"></li>
-			  <li data-target="#carousel-indicator" data-slide-to="2"></li>
-			</ol>
-			<div class="carousel-inner">
-			  <div class="carousel-item active">
-				<img class="d-block w-100 bg-overlay" src="../img/shopping.jpg" alt="First slide">
-			  </div>
-			  <div class="carousel-item">
-				<img class="d-block w-100" src="../img/rua.jpg" alt="Second slide">
-			  </div>
-			  <div class="carousel-item">
-				<img class="d-block w-100" src="../img/estacionamento.jpg" alt="Third slide">
-			  </div>
-			</div>
-			<a class="carousel-control-prev" href="#carousel-indicator" role="button" data-slide="prev">
-			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control-next" href="#carousel-indicator" role="button" data-slide="next">
-			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-			  <span class="sr-only">Next</span>
-			</a>
-		  </div>
-		  <!-- FIM DO CAROUSEL -->
+		<!-- FIM DO MENU -->
 
 	</section>
 
-	<section class="cinema" id="resume">
-		<h2 class="title">CINEMA</h2>
-		<p class="subtitle">Confira a programação da semana no Arcoplex Gravataí Shopping Center:</p>
-		<div class="movies">
-			<div class="movie-card">
-				<img src="../img/shazam_capa.jpg" alt="Shazam" class="movie">
-				<h5 class="movie-title">Shazam</h5>
-			</div>
-			<div class="movie-card">
-				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="movie">
-				<h5 class="movie-title">Capitã Marvel</h5>
-			</div>
-			<div class="movie-card">
-				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="movie">
-				<h5 class="movie-title">Dumbo</h5>
-			</div>
-			<div class="movie-card">
-				<img src="../img/aladin_capa.jpg" alt="Aladin" class="movie">
-				<h5 class="movie-title">Aladin</h5>
-			</div>
-			<div class="movie-card">
-				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="movie">
-				<h5 class="movie-title">Vingadores</h5>
-			</div>
-			<div class="movie-card">
-				<img src="../img/sw_capa.jpg" alt="Star Wars" class="movie">
-				<h5 class="movie-title">Star Wars</h5>
-			</div>
-		</div>
+	<section class="resume" id="resume">
+		
+		<p><b>TRABALHE CONOSCO</b></p>
+		<P>CADASTRE SEU CURRÍCULO</P>
+		<P>VAGAS DISPONÍVEIS</P>
+
+		<p><b>GERENTE DE RESTAURANTE</b></p>
+		<p>Mc Donald´s</p>
+		<p><b>Experiência:</b> Mínimo de 3 anos de experiência como atendente e 1 ano como gerente.</p>
+		<p><b>Faixa etária:</b> 25 a 35 anos <b>Sexo:</b> Maculino <b>Horário:</b> 15h às 23h</p>
+		<p><b>Falar com:</b> Vitor Noronha <b>Telefone:</b> (51)99258-2985</p>
+		<p><b>E-mail:</b> vitor.noronha@mcdonalds.com.br</p>
+
+		<p><b>ATENDENTE DE RESTAURANTE</b></p>
+		<P>Subway</P>
+		<p><b>Experiência:</b> Mínimo de 1 ano de experiência como atendente.</p>
+		<p><b>Faixa etária:</b> A partir de 18 anos <b>Sexo:</b> Ambos <b>Horário:</b> 09h às 18h</p>
+		<p><b>Falar com:</b> Camila Campos <b>Telefone:</b> (51)99115-8890</p>
+		<p><b>E-mail:</b> camilacampos@subway.com</p>
+
+		<p><b>GERENTE DE LOJA</b></p>
+		<P>Colombo</P>
+		<p><b>Experiência:</b> Mínimo de 1 ano de experiência como gerente em loja de eletrodomésticos e ensino superior
+			completo.</p>
+		<p><b>Faixa etária:</b> 25 a 40 anos <b>Sexo:</b> Ambos <b>Horário:</b> 09h às 18h</p>
+		<p><b>Falar com:</b> José Vidal <b>Telefone:</b> (51)98156-7765</p>
+		<p><b>E-mail:</b> vidaljose@colombo.com.br</p>
+
+		<p><b>VENDEDOR</b></p>
+		<p>Riachuelo</p>
+		<p><b>Experiência:</b> Mínimo de 1 ano de experiência como vendedor.</p>
+		<p><b>Faixa etária:</b> A partir de 18 anos <b>Sexo:</b> Ambos <b>Horário:</b> 14h às 23h</p>
+		<p><b>Falar com:</b> Ian Medeiros <b>Telefone:</b> (51)97675-0923</p>
+		<p><b>E-mail:</b> ian.medeiros@riachuelo.com.br</p>
+
 	</section>
 
 	<section class="services">
-		
+
 	</section>
 
 	<!-- INICIO DO FOOTER -->
@@ -214,7 +191,7 @@
 					<div class="right-side">
 						<div class="col">
 							<h6>ENDEREÇO</h6>
-							<p>Avenida Centenário, 555  | Gravataí - RS</p>
+							<p>Avenida Centenário, 555 | Gravataí - RS</p>
 							<button class="btn btn-outline">
 								<i class="fal fa-map-marker-alt"></i>
 								VER LOCALIZAÇÃO NO MAPA
@@ -248,7 +225,6 @@
 	<script type="text/javascript" src="../js/jquery-migrate-1.2.1.min.js"></script>
 	<script type="text/javascript" src="../js/slick.min.js"></script>
 	<script src="../js/materialize.min.js"></script>
-	<script src="../js/bootstrap.bundle.min.js"></script>
 	<script src="../js/functions.js"></script>
 </body>
 
