insere sessão de cinema

--- a/pages/index.html
+++ b/pages/index.html
@@ -76,8 +76,10 @@
 	</section>
 
 	<section class="cinema" id="resume">
+
 		<h2 class="title">CINEMA</h2>
 		<p class="subtitle">Confira a programação da semana no Arcoplex Gravataí Shopping Center:</p>
+		
 		<div class="movies">
 			<div class="movie-card">
 				<img src="../img/shazam_capa.jpg" alt="Shazam" class="movie">
@@ -104,6 +106,13 @@
 				<h5 class="movie-title">Star Wars</h5>
 			</div>
 		</div>
+		<div class="container">
+			<button class="btn btn-outline">
+				<i class="fal fa-clock"></i>
+				VER HORARIOS DOS FILMES
+			</button>
+		</div>
+		
 	</section>
 
 	<section class="services">
