inicia implementação de sessões

--- a/pages/index.html
+++ b/pages/index.html
@@ -115,8 +115,160 @@
 		
 	</section>
 
-	<section class="services">
+	<section class="alimentacao">
+
+		<h2 class="title">ALIMENTAÇÃO</h2>
 		
+		<div class="food-stores">
+			<div class="store-card">
+				<img src="../img/shazam_capa.jpg" alt="Shazam" class="store">
+				<h5 class="store-title">Shazam</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="store">
+				<h5 class="store-title">Capitã Marvel</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="store">
+				<h5 class="store-title">Dumbo</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/aladin_capa.jpg" alt="Aladin" class="store">
+				<h5 class="store-title">Aladin</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="store">
+				<h5 class="store-title">Vingadores</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/sw_capa.jpg" alt="Star Wars" class="store">
+				<h5 class="store-title">Star Wars</h5>
+			</div>
+		</div>
+		<div class="container">
+			<button class="btn btn-outline">
+				<i class="far fa-align-left"></i>
+				VER LISTA COMPLETA DE LOJAS
+			</button>
+		</div>
+
+	</section>
+	
+	<section class="alimentacao">
+
+		<h2 class="title">ALIMENTAÇÃO</h2>
+		
+		<div class="food-stores">
+			<div class="store-card">
+				<img src="../img/shazam_capa.jpg" alt="Shazam" class="store">
+				<h5 class="store-title">Shazam</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="store">
+				<h5 class="store-title">Capitã Marvel</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="store">
+				<h5 class="store-title">Dumbo</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/aladin_capa.jpg" alt="Aladin" class="store">
+				<h5 class="store-title">Aladin</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="store">
+				<h5 class="store-title">Vingadores</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/sw_capa.jpg" alt="Star Wars" class="store">
+				<h5 class="store-title">Star Wars</h5>
+			</div>
+		</div>
+		<div class="container">
+			<button class="btn btn-outline">
+				<i class="far fa-align-left"></i>
+				VER LISTA COMPLETA DE LOJAS
+			</button>
+		</div>
+
+	</section>
+	
+	<section class="alimentacao">
+
+		<h2 class="title">NOVIDADES</h2>
+		
+		<div class="food-stores">
+			<div class="store-card">
+				<img src="../img/shazam_capa.jpg" alt="Shazam" class="store">
+				<h5 class="store-title">Shazam</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="store">
+				<h5 class="store-title">Capitã Marvel</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="store">
+				<h5 class="store-title">Dumbo</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/aladin_capa.jpg" alt="Aladin" class="store">
+				<h5 class="store-title">Aladin</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="store">
+				<h5 class="store-title">Vingadores</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/sw_capa.jpg" alt="Star Wars" class="store">
+				<h5 class="store-title">Star Wars</h5>
+			</div>
+		</div>
+		<div class="container">
+			<button class="btn btn-outline">
+				<i class="far fa-align-left"></i>
+				VER LISTA COMPLETA DE LOJAS
+			</button>
+		</div>
+
+	</section>
+
+	<section class="alimentacao">
+
+		<h2 class="title">INSTAGRAM</h2>
+		
+		<div class="food-stores">
+			<div class="store-card">
+				<img src="../img/shazam_capa.jpg" alt="Shazam" class="store">
+				<h5 class="store-title">Shazam</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="store">
+				<h5 class="store-title">Capitã Marvel</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="store">
+				<h5 class="store-title">Dumbo</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/aladin_capa.jpg" alt="Aladin" class="store">
+				<h5 class="store-title">Aladin</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="store">
+				<h5 class="store-title">Vingadores</h5>
+			</div>
+			<div class="store-card">
+				<img src="../img/sw_capa.jpg" alt="Star Wars" class="store">
+				<h5 class="store-title">Star Wars</h5>
+			</div>
+		</div>
+		<div class="container">
+			<button class="btn btn-outline">
+				<i class="far fa-align-left"></i>
+				VER LISTA COMPLETA DE LOJAS
+			</button>
+		</div>
+
 	</section>
 
 	<!-- INICIO DO FOOTER -->
