adiciona fotos e sessões

--- a/pages/index.html
+++ b/pages/index.html
@@ -75,7 +75,7 @@
 
 	</section>
 
-	<section class="cinema" id="resume">
+	<section class="cinema">
 
 		<h2 class="title">CINEMA</h2>
 		<p class="subtitle">Confira a programação da semana no Arcoplex Gravataí Shopping Center:</p>
@@ -121,28 +121,34 @@
 		
 		<div class="food-stores">
 			<div class="store-card">
-				<img src="../img/shazam_capa.jpg" alt="Shazam" class="store">
-				<h5 class="store-title">Shazam</h5>
+				<img src="../img/burger_king.png" alt="burger king" class="store">
+				<h5 class="store-title">BURGUER KING</h5>
+				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="store-card">
-				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="store">
-				<h5 class="store-title">Capitã Marvel</h5>
+				<img src="../img/cacau-show.jpg" alt="CACAU SHOW" class="store">
+				<h5 class="store-title">CACAU SHOW</h5>
+				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="store-card">
-				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="store">
-				<h5 class="store-title">Dumbo</h5>
+				<img src="../img/yakisoba.jpg" alt="Gendai" class="store">
+				<h5 class="store-title">Gendai</h5>
+				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="store-card">
-				<img src="../img/aladin_capa.jpg" alt="Aladin" class="store">
-				<h5 class="store-title">Aladin</h5>
+				<img src="../img/spoleto.jpg" alt="SPOLETO" class="store">
+				<h5 class="store-title">SPOLETO</h5>
+				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 			<div class="store-card">
-				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="store">
-				<h5 class="store-title">Vingadores</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/sw_capa.jpg" alt="Star Wars" class="store">
-				<h5 class="store-title">Star Wars</h5>
+				<img src="../img/subway.jpg" alt="Subway" class="store">
+				<h5 class="store-title">Subway</h5>
+				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 		</div>
 		<div class="container">
@@ -154,119 +160,75 @@
 
 	</section>
 	
-	<section class="alimentacao">
-
-		<h2 class="title">ALIMENTAÇÃO</h2>
-		
-		<div class="food-stores">
-			<div class="store-card">
-				<img src="../img/shazam_capa.jpg" alt="Shazam" class="store">
-				<h5 class="store-title">Shazam</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="store">
-				<h5 class="store-title">Capitã Marvel</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="store">
-				<h5 class="store-title">Dumbo</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/aladin_capa.jpg" alt="Aladin" class="store">
-				<h5 class="store-title">Aladin</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="store">
-				<h5 class="store-title">Vingadores</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/sw_capa.jpg" alt="Star Wars" class="store">
-				<h5 class="store-title">Star Wars</h5>
-			</div>
-		</div>
-		<div class="container">
-			<button class="btn btn-outline">
-				<i class="far fa-align-left"></i>
-				VER LISTA COMPLETA DE LOJAS
-			</button>
-		</div>
-
-	</section>
-	
-	<section class="alimentacao">
+	<section class="novidades">
 
 		<h2 class="title">NOVIDADES</h2>
+		<p class="subtitle">Confira o que está acontecendo no Gravataí Shopping Center:</p>
 		
-		<div class="food-stores">
-			<div class="store-card">
-				<img src="../img/shazam_capa.jpg" alt="Shazam" class="store">
-				<h5 class="store-title">Shazam</h5>
+		<div class="news-container">
+			<div class="news-card">
+				<img src="../img/Novidade_1.png" alt="Shazam" class="news">
+				<h5 class="news-title">ESTACIONAMENTO GRATIS</h5>
+				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
-			<div class="store-card">
-				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="store">
-				<h5 class="store-title">Capitã Marvel</h5>
+			<div class="news-card">
+				<img src="../img/Novidade_2.png" alt="Capitã Marvel" class="news">
+				<h5 class="news-title">PÁSCOA NO GRAVATAÍ</h5>
+				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
-			<div class="store-card">
-				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="store">
-				<h5 class="store-title">Dumbo</h5>
+			<div class="news-card">
+				<img src="../img/Novidade_3.png" alt="Dumbo" class="news">
+				<h5 class="news-title">BIG BALL</h5>
+				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
-			<div class="store-card">
-				<img src="../img/aladin_capa.jpg" alt="Aladin" class="store">
-				<h5 class="store-title">Aladin</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="store">
-				<h5 class="store-title">Vingadores</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/sw_capa.jpg" alt="Star Wars" class="store">
-				<h5 class="store-title">Star Wars</h5>
+			<div class="news-card">
+				<img src="../img/Novidade_1.png" alt="Shazam" class="news">
+				<h5 class="news-title">ESTACIONAMENTO GRATIS</h5>
+				<p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+					Officiis tenetur autem sequi vel deleniti nisi!</p>
 			</div>
 		</div>
 		<div class="container">
 			<button class="btn btn-outline">
 				<i class="far fa-align-left"></i>
-				VER LISTA COMPLETA DE LOJAS
+				VER TODAS AS NOVIDADES
 			</button>
 		</div>
 
 	</section>
 
-	<section class="alimentacao">
+	<section class="instagram">
 
 		<h2 class="title">INSTAGRAM</h2>
-		
-		<div class="food-stores">
-			<div class="store-card">
-				<img src="../img/shazam_capa.jpg" alt="Shazam" class="store">
-				<h5 class="store-title">Shazam</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="store">
-				<h5 class="store-title">Capitã Marvel</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="store">
-				<h5 class="store-title">Dumbo</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/aladin_capa.jpg" alt="Aladin" class="store">
-				<h5 class="store-title">Aladin</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="store">
-				<h5 class="store-title">Vingadores</h5>
-			</div>
-			<div class="store-card">
-				<img src="../img/sw_capa.jpg" alt="Star Wars" class="store">
-				<h5 class="store-title">Star Wars</h5>
-			</div>
-		</div>
-		<div class="container">
-			<button class="btn btn-outline">
-				<i class="far fa-align-left"></i>
-				VER LISTA COMPLETA DE LOJAS
+		<p class="subtitle">
+			<button class="btn btn-circle">
+				<i class="fab fa-instagram"></i>
 			</button>
+			@gravataishoppingcenter
+		</p>
+		
+		<div class="photos-container">
+			<div class="photo-card">
+				<img src="../img/shazam_capa.jpg" alt="Shazam" class="photo">
+			</div>
+			<div class="photo-card">
+				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="store">
+			</div>
+			<div class="photo-card">
+				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="photo">
+			</div>
+			<div class="photo-card">
+				<img src="../img/aladin_capa.jpg" alt="Aladin" class="photo">
+			</div>
+			<div class="photo-card">
+				<img src="../img/vingadores-capa.jpg" alt="Vingadores" class="photo">
+			</div>
+			<div class="photo-card">
+				<img src="../img/sw_capa.jpg" alt="Star Wars" class="photo">
+			</div>
 		</div>
 
 	</section>
