adiciona classe faltante

--- a/pages/index.html
+++ b/pages/index.html
@@ -215,7 +215,7 @@
 				<img src="../img/shazam_capa.jpg" alt="Shazam" class="photo">
 			</div>
 			<div class="photo-card">
-				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="store">
+				<img src="../img/capitamarvel_capa.jpg" alt="Capitã Marvel" class="photo">
 			</div>
 			<div class="photo-card">
 				<img src="../img/dumbo_capa.jpg" alt="Dumbo" class="photo">
